feat: :zap: finish landing page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,24 @@
   --color-cinnabar-800: #a60e14;
   --color-cinnabar-900: #891317;
   --color-cinnabar-950: #4b0407;
+  --animate-marquee: marquee var(--duration) infinite linear;
+  --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
+  @keyframes marquee {
+  from {
+    transform: translateX(0);
+    }
+  to {
+    transform: translateX(calc(-100% - var(--gap)));
+    }
+  }
+  @keyframes marquee-vertical {
+  from {
+    transform: translateY(0);
+    }
+  to {
+    transform: translateY(calc(-100% - var(--gap)));
+    }
+  }
 }
 
 :root {
